Added check of the maximum limit for a vacancy

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,3 +5,4 @@ region = Москва
 login = <your login>
 password = <your password>
 geckoDriver = <path to geckoDriver>
+maxLimitVacancySendOffer = false
