--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,4 +6,4 @@ login = <your login>
 password = <your password>
 geckoDriver = <path to geckoDriver>
 maxLimitVacancySendOffer = false
-maxLimitResumeView = false
+positionVacancy = 0
