Update README.md and config.properties

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,9 +1,19 @@
+# Начальная страница
 startPage = 1
+# На какой странице остановиться (включительно)
 endPage = 20
+# Какую профессию искать, например, водитель, повар или менеджер
 profession = Водитель
+# Название Вакансии, которую вы создали
 vacancy = Москва
+# Логин от вашей учётной записи hh.ru
 login = <your login>
+# Пароль от вашей учётной записи hh.ru
 password = <your password>
+# Путь к geckoDriver. На Windows используйте .exe, на linux без расширения
 geckoDriver = <path to geckoDriver>
+# Позиция вашей вакансии. Это нужно если у вас например 2 одинаковые вакансии. И вы вводите название, но нужная появляется
+# внизу, тогда поставьте значение 1 и бот спустится на 1 вакансию.
 positionVacancy = 0
+# Сколько откликов нужно отправить. Помните, что ограничение на одну вакансию примерно 2000.
 maxLimitSendOffer = 500
