--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -7,9 +7,9 @@ profession = Водитель
 # Название Вакансии, которую вы создали
 vacancy = Москва
 # Логин от вашей учётной записи hh.ru
-login = <your login>
+login_hh = <your login hh>
 # Пароль от вашей учётной записи hh.ru
-password = <your password>
+password_hh = <your password hh>
 # Путь к geckoDriver. На Windows используйте .exe, на linux без расширения
 geckoDriver = <path to geckoDriver>
 # Позиция вашей вакансии. Это нужно если у вас например 2 одинаковые вакансии. И вы вводите название, но нужная появляется
@@ -17,3 +17,7 @@ geckoDriver = <path to geckoDriver>
 positionVacancy = 0
 # Сколько откликов нужно отправить. Помните, что ограничение на одну вакансию примерно 2000.
 maxLimitSendOffer = 500
+# Логин от вашей базы данных
+login_db = <your login db>
+# Пароль от вашей базы данных
+password_db = <your password db>
