Fixed Firefox memory leak

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -11,7 +11,7 @@ login_hh = <your login hh>
 # Пароль от вашей учётной записи hh.ru
 password_hh = <your password hh>
 # Путь к geckoDriver. На Windows используйте .exe, на linux без расширения
-geckoDriver = <path to geckoDriver>
+chromeDriver = <path to geckoDriver>
 # Позиция вашей вакансии. Это нужно если у вас например 2 одинаковые вакансии. И вы вводите название, но нужная появляется
 # внизу, тогда поставьте значение 1 и бот спустится на 1 вакансию.
 positionVacancy = 0
